# seam-carver

./: Cargo.toml  Readme.md
src/: main.rs
src/seam_carver/: cost_matrix.rs  energy_matrix.rs  mod.rs  resize_dimension.rs
