[package]
name = "seam-carver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
image = "0.25.0"
indicatif = "0.17.8"
rayon = "1.10.0"
regex = "1.10.4"
